Desperate way to db save

--- a/templates/dugout/analytics.html
+++ b/templates/dugout/analytics.html
@@ -757,8 +757,8 @@
                             <td style="text-align: center;">{{scr.2}}</td>
                             <td style="text-align: center;">{{scr.1}}</td>
                             <td style="text-align: center;">{{scr.0}}</td>
-                            <td style="text-align: center;">{% widthratio scr.2 scr.2|add:scr.1 100 %}</td>
-                            <td style="text-align: center;">{% widthratio scr.0 scr.2|add:scr.1|add:scr.0 100 %}</td>
+                            <td style="text-align: center;">{% widthratio scr.2 scr.2|add:scr.1 100 %} %</td>
+                            <td style="text-align: center;">{% widthratio scr.0 scr.2|add:scr.1|add:scr.0 100 %} %</td>
                             <td style="text-align: center;">{{scr.3}}</td>
                             <td style="text-align: center;">{{scr.4}}</td>
                             <td style="text-align: center;">{{scr.5}}</td>
