--- a/templates/login.html
+++ b/templates/login.html
@@ -38,6 +38,7 @@
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h1 class="mb-4 text-gray-900 h4">Welcome Back!</h1>
+                                        <h1 class="mb-4 text-gray-900 h4">TanyaMandeh Admin</h1>
                                     </div>
                                     <div class="content-section">
                                         <form method="POST">
