--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -200,6 +200,10 @@
                 <a class="nav-link" hx-get="{% url 'contact' %}" hx-target = "#main-content"><i class="fas fa-id-card-alt"></i>
                 Contact</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}"><i class="fas fa-key"></i>
+                Login</a>
+            </li>
         </ul>
     </div>
 </nav>
