reduce question to 40

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -39,7 +39,7 @@
 <!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 {% block script %}{% endblock script %}
-<script src="{% static 'js/question-real.js' %}"></script>
+<script src="{% static 'js/question-filter.js' %}"></script>
 <script src="{% static 'js/app-edit.js' %}"></script>
 <script type="text/javascript">
 	window.csrfmiddlewaretoken="{{csrf_token}}";
