--- a/templates/snippets/form_box_2.html
+++ b/templates/snippets/form_box_2.html
@@ -104,10 +104,10 @@
 	    </div>
 	    <div class="input-group">
 		  <label class="input-group__label" for="kabupaten">Kabupaten</label>
-	      <select class="input-group__input" name="kabupaten" id="kabupaten" required>
+	      <!-- <select class="input-group__input" name="kabupaten" id="kabupaten" required>
 	      	
-	      </select>
-		  <!-- <input class="input-group__input" type="text" name="nama" id="nama" placeholder="Nama" required /> -->
+	      </select> -->
+		  <input class="input-group__input" type="text" name="kabupaten" id="kabupaten" placeholder="" required />
 	    </div>
 	    <div class="input-group">
 		  <label class="input-group__label" for="marriage">Status Pernikahan</label>
@@ -186,7 +186,7 @@
 	</form>
 </div>
 
-<script>
+<!-- <script>
     $("#prov").change(function () {
       //var url = $("#formdata").attr("data-marketplace-url");  // get the url of the `load_cities` view
       var category = $(this).val(); 
@@ -203,4 +203,4 @@
       });
 
     });
-</script>
+</script> -->
